<resources>
    <string name="app_name">RUPizzeria</string>
    <string name="chosenPizzaTextView">Chosen Pizza</string>
    <string name="pizzaSizeTextView">Pizza Size</string>
    <string name="additionalToppingsTextView">Additional Toppings</string>
    <string name="selectedToppingsTextView">Selected Toppings</string>
    <string name="addButton">Add</string>
    <string name="removeButton">Remove</string>
    <string name="priceTextView">Price $</string>
    <string name="addToOrderButton">Add To Order</string>
    <string name="phoneNumberTextView">Phone Number:</string>
    <string name="orderTextView">Order:</string>
    <string name="removeSelectedPizzaButton">Remove Selected Pizza</string>
    <string name="subtotalTextView">Subtotal $:</string>
    <string name="salesTaxTextView">Sales Tax $:</string>
    <string name="orderTotalTextView">Order Total $:</string>
    <string name="placeOrderButton">Place Order</string>
    <string name="customerPhoneNumbersTextView">Customer Phone Numbers:</string>
    <string name="cancelOrderTextView">Cancel Order</string>
    <string name="DeluxePizza">Deluxe Pizza</string>
    <string name="HawaiianPizza">Hawaiian Pizza</string>
    <string name="PepperoniPizza">Pepperoni Pizza</string>


    <string name="OK">OK</string>
    <string name="confirmation">Confirmation</string>
    <string name="ClickToContinueOrder">Click to Continue with Order</string>
    <string name="errorDuplicatePhoneNumberTitle">Error with Phone Number</string>
    <string name="errorDuplicatePhoneNumberMessage">Phone Number Has Already Ordered</string>

    <string name="errorInvalidPhoneNumberAlertTitle">Error with Phone Number</string>
    <string name="errorInvalidPhoneNumberAlertMessage">Phone Number Not Valid</string>

    <string name="confirmationForOrderToBePlaceAlertTitle">Warning with Placing Order</string>
    <string name="confirmationForOrderToBePlaceAlertMessage">You are about to place an order</string>

    <string name="errorNoCurrentOrderAlertTitle">Error with Current Order</string>
    <string name="errorNoCurrentOrderAlertMessage">No current order or there is no pizzas in the current order</string>

    <string name="showNoPizzasSelectedTitle">Warning with Removing Pizzas From Order</string>
    <string name="showNoPizzasSelectedMessage">No pizzas selected!</string>

    <string name="showNoPizzasInOrderTitle">Warning with Removing Pizzas From Order</string>
    <string name="showNoPizzasInOrderMessage">There are no pizzas in the order!</string>

    <string name="addToOrderAlertBoxTitle">Added to Order</string>
    <string name="addToOrderAlertBoxMessage">Order has been added.</string>

    <string name="showConfirmationRemoveEssentialToppingsTitle">Warning with Removing Toppings</string>
    <string name="showConfirmationRemoveEssentialToppingsMessage">You are removing essential toppings</string>

    <string name="showConfirmationNoToppingsOnPizzaTitle">Warning with Removing Toppings</string>
    <string name="showConfirmationNoToppingsOnPizzaMessage">No Toppings on Pizza</string>

    <string name="showMaxToppingsOnPizzaTitle">Warning with Adding Toppings</string>
    <string name="showMaxToppingsOnPizzaMessage">You can only have at most 7 toppings</string>

    <string name="errorCannotCancelOrderTitle">Error with Cancelling Order</string>
    <string name="errorCannotCancelOrderMessage">No Order Selected to Cancel</string>

    <string name="customizeYourPizzaLabel">Customize Your Pizza</string>
    <string name="currentOrderLabel">Current Order</string>
    <string name="storeOrdersLabel">Store Orders</string>

    <string name="showOrderIsCancelledToast">Order is Cancelled</string>
    <string name="showCannotCancelToast">Cannot Cancel Order</string>
    <string name="showOrderIsPlacedToast">Order is Placed</string>
    <string name="showAddedToOrderToast">Added Pizza to Order</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="deluxePizza">Deluxe Pizza</string>
    <string name="hawaiianPizza">Hawaiian Pizza</string>
    <string name="pepperoniPizza">Pepperoni Pizza</string>
    <string name="currentOrders">Current Orders</string>
    <string name="manageStoreOrders">Manage Store Orders</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="zero">0.00</string>

</resources>