<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/DeluxePizza"
        android:onClick="openDeluxeCustomizePizzaActivity"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:srcCompat="@drawable/deluxepizza" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/DeluxePizza"
        android:onClick="openHawaiianCustomizePizzaActivity"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/hawaiianpizza" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="123dp"
        android:layout_height="123dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/OK"
        android:onClick="openPepperoniCustomizePizzaActivity"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        app:srcCompat="@drawable/peppizza" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/DeluxePizza"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/DeluxePizza"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/PepperoniPizza"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <Button
        android:id="@+id/currentOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="122dp"
        android:onClick="openCurrentOrdersActivity"
        android:text="@string/currentOrders"
        app:layout_constraintBottom_toTopOf="@+id/manageStoreOrdersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <Button
        android:id="@+id/manageStoreOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="46dp"
        android:onClick="openStoreOrdersActivity"
        android:text="@string/manageStoreOrders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderButton" />

</androidx.constraintlayout.widget.ConstraintLayout>